<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buscar_libros">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:text="@string/buscar_libros"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/marca_la_opci_n_por_la_que_quieres_buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <RadioGroup
        android:id="@+id/grupoBuscar"
        android:layout_width="174dp"
        android:layout_height="91dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="@+id/descripcion"
        app:layout_constraintTop_toBottomOf="@+id/descripcion">

        <RadioButton
            android:id="@+id/radioTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo" />

        <RadioButton
            android:id="@+id/radioAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autor" />

        <RadioButton
            android:id="@+id/radioEditorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editorial" />
    </RadioGroup>

    <TextView
        android:id="@+id/opcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/opcion"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/descripcion"
        app:layout_constraintTop_toBottomOf="@+id/grupoBuscar" />

    <EditText
        android:id="@+id/inputBuscar"
        android:layout_width="338dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/opcion"
        app:layout_constraintTop_toBottomOf="@+id/opcion" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="buscar"
        android:text="@string/buscar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/inputBuscar"
        app:layout_constraintTop_toBottomOf="@+id/inputBuscar" />

</androidx.constraintlayout.widget.ConstraintLayout>